--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "commonmark-spec",
-  "version": "0.29.0",
-  "description": "CommonMark spec and test cases",
+  "name": "@gerhobbelt/commonmark-spec",
+  "version": "0.30.0-2",
+  "description": "CommonMark spec and test cases - forked and extended",
   "homepage": "http://commonmark.org",
-  "license": "CC-BY-SA-4.0",
+  "license": "MIT",
   "keywords": [
     "commonmark",
     "markdown"
   ],
   "repository": "commonmark/CommonMark",
-  "license": "MIT",
   "files": [
     "index.js",
-    "spec.txt"
-  ]
+    "spec.txt",
+    "extensions/",
+    "*.dtd",
+    "alt*.txt"
+  ],
+  "scripts": {
+    "pub": "npm publish --access public"
+  }
 }
